src/osd/osd_types.h
@@ -58,8 +58,6 @@
 
 typedef hobject_t collection_list_handle_t;
 
-typedef uint8_t shard_id_t;
-
 /// convert a single CPEH_OSD_FLAG_* to a string
 const char *ceph_osd_flag_name(unsigned flag);
 
