src/test/osd/types.cc
@@ -1294,9 +1294,19 @@ TEST(pg_pool_t_test, get_random_pg_position) {
   }
 }
 
+TEST(shard_id_t, iostream) {
+    set<shard_id_t> shards;
+    shards.insert(shard_id_t(0));
+    shards.insert(shard_id_t(1));
+    shards.insert(shard_id_t(2));
+    ostringstream out;
+    out << shards;
+    ASSERT_EQ(out.str(), "0,1,2");
+}
+
 /*
  * Local Variables:
- * compile-command: "cd .. ;
+ * compile-command: "cd ../.. ;
  *   make unittest_osd_types ;
  *   ./unittest_osd_types # --gtest_filter=pg_missing_t.constructor
  * "
